# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api/: permissions.py  serializers.py  urls.py  views.py
items/: admin.py  models.py
items/migrations/: 0001_initial.py
supermarket/: asgi.py  settings.py  urls.py  wsgi.py
